--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,11 @@
 .parsed-content a:hover {
   text-decoration: underline;
 }
+
+.emoji {
+  height: 20px;
+  width: 20px;
+  margin: 0 2px;
+  display: inline;
+  vertical-align: middle;
+}
